--- a/src/App.scss
+++ b/src/App.scss
@@ -14,8 +14,5 @@ body{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-}
-
-#search-bar{
-  width: 100%;
+  justify-content: space-between;
 }
