--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
 @import 'variaveis';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 body{
   background-color: $dark;
+  font-family: 'Roboto', sans-serif;
 }
 
 .App{
