--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,10 @@ body{
   margin: auto;
   margin-top: 50px;
 }
+
+.movie-wrapper{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
